2005-12-19  Johan Bilien <johan.bilien@nokia.com>
	* hildon-navigator/application-switcher.c: Backported fixes to N#21089
	  from 2005
	* Reverted fix to N#21895 as it doesn't behave as expected

2005-12-19  Johan Bilien <johan.bilien@nokia.com>
	* hildon-home/hildon-home-image-loader.c: Backported fixes to N#21750
	  and N#21814 from 2005

2005-12-16  Johan Bilien <johan.bilien@nokia.com>
	* hildon-home/hildon-home-main.c:
	   . construct_user_applets(): Backported memory leak fixes from 2005
	   . Applied fix to N#21895:   'Apply' button is dimmed for the
	     currently selected (unloaded) image. Patch by Koivikko Jari.
	* hildon-status-bar/hildon-status-bar-main.c:
	   . add_user_items(): Backported memory leak fix from 2005

2005-12-15  Johan Bilien <johan.bilien@nokia.com>
	* Depend on dbus >= 0.50
	* backported a few changes from IT-2005
	* configure.ac: 2.1.0

2005-11-10  Karoliina Salminen  <karoliina.t.salminen@nokia.com>

	* Branched to IT-2005, trunk continues as IT-2006 branch *************************
        * Patched PE bug N#18257 Task navigator: tooltip sometimes only one character wide
	* hildon-navigator/application-switcher.c
	* the label containing the tooltip is recreated each time it
  	is shown. This is a workaround on the sort-of-recursivity problem
  	on autotruncation. (Truncates previously truncated label again)
	* configure.ac: 2.0.0
	* 2.0.0 is the new baseline for IT-2006 development

2005-11-07  Karoliina Salminen  <karoliina.t.salminen@nokia.com>

	* Patched PE bug N#18881 Valgrind reported memory leaks with XProperty usage, Others menu and strdup
	* hildon-navigator/other_menu.c
	  - others_menu_deinit(): freeing menu
	  - others_menu_changed_cb(): freeing menu objects
	  - others_menu_get_items(): changed place to monitor directory changes, freeing objects
	  - others_menu_get_items(): changed menu item creation to be able free menu item data
	* hildon-navigator/windowmanager.c